<?xml version="1.0" encoding="utf-8"?><!-- 使用ScrollView為最外層的元件 -->
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.macdidi.myandroidtutorial.ItemActivity">

    <!-- 刪除xmlns:tools, xmlns:android的設定 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:padding="6sp"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/title_text"
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:hint="@string/enter_title"
                android:padding="6sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:padding="6sp"
                android:text="@string/content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/content_text"
                android:layout_gravity="top"
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:hint="@string/enter_content"
                android:padding="6sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <!-- 顯示圖片 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:padding="6sp"
                android:text="單號"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/orderno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:padding="6sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:background="@drawable/rectangle_drawable"
                android:padding="6sp"
                android:text="序號"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonOnClick"
                android:text="1" />

        </TableRow>

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:background="@drawable/rectangle_drawable"
            android:padding="6sp"
            android:visibility="invisible" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <ImageButton
                    android:id="@+id/take_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickFunction"
                    android:src="@drawable/ic_camera_alt_48pt" />

                <ImageButton
                    android:id="@+id/select_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickFunction"
                    android:src="@drawable/ic_color_lens_48pt" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="Query"
                    android:text="查詢" />

            </TableRow>
        </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cancel_item"
                    android:layout_margin="2sp"
                    android:onClick="onSubmit"
                    android:padding="6sp"
                    android:text="@android:string/cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="upload" />

                <Button
                    android:id="@+id/ok_teim"
                    android:layout_margin="2sp"
                    android:onClick="onSubmit"
                    android:padding="6sp"
                    android:text="@string/save"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/set_location"
                    android:onClick="clickFunction"
                    android:src="@drawable/location_icon"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/record_sound"
                    android:onClick="clickFunction"
                    android:src="@drawable/record_sound_icon"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/set_alarm"
                    android:onClick="clickFunction"
                    android:src="@drawable/alarm_icon"
                    android:visibility="invisible" />
            </TableRow>
        </TableLayout>

    </TableLayout>
    <!-- ScrollView的結束標籤 -->
</ScrollView>